remove fixed footer, convert to (permanently-collapsed) navbar

--- a/css/header.css
+++ b/css/header.css
@@ -29,7 +29,16 @@
 	letter-spacing: normal;
 }
 
+.navbar-brand {
+	margin-right: auto;
+}
 
+.nav-item {
+	margin-left: auto;
+	text-align: right;
+}
+
+/*
 footer {
     height: 5%;
     background: black;
@@ -45,15 +54,16 @@ footer {
     z-index: 9999;
 }
 
-footer a {
-	color:white;
+#footer a, #footer-lazy a {
+	color: white;
 	font-style: italic;
 }
-footer a:hover {
+footer a:hover, header a:hover {
 	text-decoration: none;
 }
+*/
 
-footer #tenerife-jack {
+#tenerife-jack {
 	width: 2%;
 	height: 0.8em;
 	display: inline;
@@ -71,26 +81,6 @@ footer #tenerife-jack {
 }
 
 
-
-
-
-/* move footer into dropdown for mobiles */
-@media only screen and ( max-width: 650px ) {
-/*   at 568px (iphone6 and above landscape) or less, do: */
-
-	.cover {
-		max-height: 620px;
-	}
-	footer {
-		visibility: hidden;
-		position: relative;
-	}
-	
-	
-	
-	
-	
-}
 
 
 /*
