--- a/css/hobbies.css
+++ b/css/hobbies.css
@@ -10,18 +10,18 @@
 }
 
 h1 {
-	font-size: 2em;
+	font-size: 1.6em;
 	font-weight: bolder;
 	letter-spacing: 0.5px;
 	width: 100%;
-	height: 20%;
-	padding: 8% 4% 10% 4%;
+	min-height: 20%;
+	padding: 8% 10% 6% 10%;
 	box-sizing: border-box;
-/*	margin: 5% 0 0 0;*/
+	margin-bottom: 0;
 	text-transform: uppercase;
 	font-family: serif;
 	position: fixed;
-	bottom: 30px;
+	bottom: 0;
 	left: 0;
 	background: linear-gradient(rgba(10,10,10,0), rgba(10,10,10,1) 20%);
 	z-index: 99;
@@ -37,7 +37,7 @@ h1 {
 	text-align: center;
 /*	max-width: 1000px;*/
 	width: 100%;
-	height: 100%;
+/*	max-height: 80%;*/
 	overflow-y: auto;
 }
 
